added image of first container

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is test</h1>
+    <div class="first-section">
+      <div class="first-section-container">
+        <img
+          src="resources/Banner Image.png"
+          alt=""
+          srcset=""
+          class="first-section-img"
+        />
+      </div>
+    </div>
   </body>
 </html>
