added text over first container image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
           srcset=""
           class="first-section-img"
         />
+        <h3 class="first-section-text-1">Happy New Year</h3>
+        <h1 class="first-section-text-2">New Year Party <br />Celebration</h1>
       </div>
     </div>
   </body>
