added overlay over the image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
           srcset=""
           class="first-section-img"
         />
-        <h3 class="first-section-text-1">Happy New Year</h3>
+        <div class="overlay"></div>
+        <p class="first-section-text-1">Happy New Year</p>
         <h1 class="first-section-text-2">New Year Party <br />Celebration</h1>
       </div>
     </div>
