--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
         <h1 class="first-section-text-2">New Year Party <br />Celebration</h1>
       </div>
     </div>
+    <div class="second-section">
+      <h1 style="font-size: 50px; color: red; font-weight: bold">65% OFF</h1>
+      <p style="color: red">OUR HOLIDAY DEALS ARE BETTER</p>
+      <h1 style="font-weight: bold; margin-top: -10px">ALL CATEGORIES</h1>
+      <div>
+        <img src="resources/New Year Photo.png" alt="" />
+      </div>
+    </div>
   </body>
 </html>
