--- a/index.html
+++ b/index.html
@@ -28,5 +28,40 @@
         <img src="resources/New Year Photo.png" alt="" />
       </div>
     </div>
+
+    <div class="third-section">
+      <div class="third-section-container">
+        <img src="resources/Vectorrr.png" alt="" />
+        <div class="overlay"></div>
+        <div style="position: absolute">
+          <div style="display: flex; padding: 30px">
+            <div style="position: relative; z-index: 2">
+              <h1 style="z-index: 2; color: white; font-size: 40px">
+                Welcome to <br />
+                midnight party
+              </h1>
+              <p style="z-index: 2; color: white">
+                Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                sed molestie malesuada. Ipsum sed sodales risus ut pellentesque
+                vel euismod.
+              </p>
+              <button
+                style="
+                  color: white;
+                  background-color: black;
+                  border: none;
+                  padding: 20px;
+                "
+              >
+                JOIN NOW
+              </button>
+            </div>
+            <div>
+              <img src="resources/Group 70.png" alt="" style="z-index: 2" />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
