--- a/index.html
+++ b/index.html
@@ -63,5 +63,21 @@
         </div>
       </div>
     </div>
+    <div class="fourth-section">
+      <p><span style="color: red">Place:</span> New Park Hotel</p>
+      <p><span style="color: red">Date:</span> 31 December Night 2023</p>
+      <p><span style="color: red">Time:</span> Evening 7:30 PM to 12:30 AM</p>
+      <button
+        style="
+          padding: 10px;
+          background-color: red;
+          border: none;
+          color: white;
+          border-radius: 5px;
+        "
+      >
+        JOIN NOW
+      </button>
+    </div>
   </body>
 </html>
