--- a/index.html
+++ b/index.html
@@ -79,5 +79,26 @@
         JOIN NOW
       </button>
     </div>
+    <div class="fifth-section">
+      <div>
+        <h3 style="color: red">NEW BEST OFFER</h3>
+        <h1>Coming Soon</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod.
+        </p>
+      </div>
+      <div>
+        <img src="resources/Ellipse 1.png" class="fifth-section-img" />
+      </div>
+      <div>
+        <h1 style="color: red">2024</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.ss
+        </p>
+        <img src="resources/Group 96.png" style="width: 90px" />
+      </div>
+    </div>
   </body>
 </html>
