done with holidays sale section

--- a/index.html
+++ b/index.html
@@ -100,5 +100,38 @@
         <img src="resources/Group 96.png" style="width: 90px" />
       </div>
     </div>
+    <div class="sixth-section">
+      <div class="sixth-section-containerss">
+        <div style="text-align: center">
+          <p style="font-weight: bold; margin-top: 50px">WHAT IS FUNCTIONALS</p>
+          <h1 style="font-size: 50px; margin-top: -10px">
+            <span style="color: red">Holidays</span> Sale 50%
+          </h1>
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. Eleifend nunc purus quam id fermentum amet amet sit
+            consectetur.
+          </p>
+        </div>
+        <div>
+          <img
+            src="resources/Rectangle 1.png"
+            style="position: relative; left: 600px; width: 40%"
+          />
+          <img
+            src="resources/Group 44.png"
+            style="position: relative; left: 30px; bottom: 50px"
+          />
+        </div>
+        <div>
+          <img src="resources/Rectangle 2.png" style="width: 100%" />
+          <img
+            src="resources/Group 75.png"
+            style="width: 40%; position: relative; bottom: 370px"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
