added grid section

--- a/index.html
+++ b/index.html
@@ -133,5 +133,24 @@
         </div>
       </div>
     </div>
+    <div class="seven-section">
+      <div>
+        <p style="color: red">THE BEST GIFTS</p>
+        <h1>Our Awesome Portfolio</h1>
+        <p>
+          Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+          euismod.
+        </p>
+      </div>
+      <div style="display: grid; grid-template-columns: repeat(3, 1fr)">
+        <img class="grid-images" src="resources/Rectangle 3.png" />
+        <img class="grid-images" src="resources/Rectangle 4.png" />
+        <img class="grid-images" src="resources/Rectangle 5.png" />
+        <img class="grid-images" src="resources/Rectangle 6.png" />
+        <img class="grid-images" src="resources/Rectangle 7.png" />
+        <img class="grid-images" src="resources/Rectangle 8.png" />
+      </div>
+    </div>
   </body>
 </html>
