--- a/index.html
+++ b/index.html
@@ -152,5 +152,31 @@
         <img class="grid-images" src="resources/Rectangle 8.png" />
       </div>
     </div>
+    <div class="eighth-section">
+      <img src="resources/Group 61.png" alt="" style="width: 10%" />
+      <h1>Subscribe Newsletter</h1>
+      <p>
+        Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+      </p>
+      <div>
+        <input
+          style="padding: 18px; border: none; border-radius: 30px 0px 0px 30px"
+          type="text"
+          placeholder="user@gmail.com"
+        />
+        <button
+          style="
+            padding: 18px;
+            border-radius: 0px 30px 30px 0px;
+            border: none;
+            background-color: red;
+            color: white;
+          "
+        >
+          Subscribe
+        </button>
+      </div>
+    </div>
   </body>
 </html>
