done with footer part

--- a/index.html
+++ b/index.html
@@ -178,5 +178,37 @@
         </button>
       </div>
     </div>
+    <div class="footer-section">
+      <div class="first-footer-part">
+        <div>
+          <p>44, Big Building Roosevelt street</p>
+          <p>Beach Gardens Florida 33410</p>
+        </div>
+        <div>
+          <p>+00 123 345 456</p>
+          <p>www.website.com</p>
+        </div>
+      </div>
+
+      <div class="second-footer-part">
+        <img src="resources/Facebook.png" alt="" />
+        <img src="resources/Twitter.png" alt="" />
+        <img src="resources/Instagram.png" alt="" />
+        <img src="resources/Linkedin.png" alt="" />
+      </div>
+      <div class="third-footer-part">
+        <p>2017, All Rights Reserved</p>
+        <button
+          style="
+            padding: 10px;
+            color: white;
+            background-color: black;
+            border: none;
+          "
+        >
+          Unsubscribe
+        </button>
+      </div>
+    </div>
   </body>
 </html>
