added hover effect on grid elements

--- a/index.html
+++ b/index.html
@@ -143,7 +143,14 @@
           euismod.
         </p>
       </div>
-      <div style="display: grid; grid-template-columns: repeat(3, 1fr)">
+      <div
+        style="
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 10px;
+          margin-bottom: 10px;
+        "
+      >
         <img class="grid-images" src="resources/Rectangle 3.png" />
         <img class="grid-images" src="resources/Rectangle 4.png" />
         <img class="grid-images" src="resources/Rectangle 5.png" />
